--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,18 +18,18 @@
 
         </activity>
 
-        <activity android:name=".DescriptionFragment"
+        <activity android:name=".view.DescriptionFragment"
             android:label="Новости"
             android:theme="@style/AppTheme">
         </activity>
 
-        <activity android:name=".DescriptionWebView"
+        <activity android:name=".view.DescriptionWebView"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
 
         <activity
-            android:name=".SplashActivity"
+            android:name=".view.SplashActivity"
             android:theme="@style/Theme.Design.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
