--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="OnlinerNews"
@@ -23,7 +24,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.DescriptionWebView"
+        <activity android:name=".presentation.base.DescriptionWebView"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
