--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,9 +57,11 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.dagger:dagger:2.24'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
-    kapt 'com.google.dagger:dagger-android-processor:2.24'
-    kapt 'com.google.dagger:dagger-compiler:2.24'
+    implementation 'com.google.dagger:dagger:2.26'
+    implementation 'com.google.dagger:dagger-android:2.26'
+    implementation 'com.google.dagger:dagger-android-support:2.26'
+    kapt 'com.google.dagger:dagger-android-processor:2.26'
+    kapt 'com.google.dagger:dagger-compiler:2.26'
 }
 
