--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ local.properties
 .Trashes
 ehthumbs.db
 Thumbs.db
+.idea/gradle.xml
+.idea/caches/build_file_checksums.ser
+.idea/codeStyles/codeStyleConfig.xml
+.idea/codeStyles/Project.xml
